SUBDIRS = data lib src tests help po

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = autogen.sh NEWS

DISTCLEANFILES = test-driver

MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL)

# We currently have no custom macros
GITIGNOREFILES = m4

-include $(top_srcdir)/git.mk
