SUBDIRS = data lib src tests help po

ACLOCAL_AMFLAGS = --install -I m4 ${ACLOCAL_FLAGS}

EXTRA_DIST = autogen.sh NEWS

MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL)

# We currently have no custom macros
GITIGNOREFILES = m4

-include $(top_srcdir)/git.mk
