include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = glchess
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = figures/new_game.png \
	      figures/game.png \
              figures/preferences_game.png \
	      figures/preferences_view.png
DOC_LINGUAS = ca cs da de el en_GB es eu fr ja oc pt_BR ru sr sr@latin sv

-include $(top_srcdir)/git.mk
