@YELP_HELP_RULES@
HELP_ID = gnome-chess

HELP_MEDIA = figures/new_game.png \
	      figures/game.png \
              figures/preferences_game.png \
	      figures/preferences_view.png

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fr gl ja ko oc pt_BR ru sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
