@YELP_HELP_RULES@
HELP_ID = gnome-chess

HELP_MEDIA = figures/game-3-12.png \
             figures/preferences-game-3-12.png \
	     figures/preferences-appearance-3-12.png

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fr gl ja ko oc pl pt_BR ru sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
