help_sources = [
  'index.docbook',
  'legal.xml',
]

help_media = [
  'figures/game-3-12.png',
  'figures/preferences-game-3-12.png',
  'figures/preferences-appearance-3-12.png',
]

help_languages = [
  'ca',
  'cs',
  'da',
  'de',
  'el',
  'en_GB',
  'es',
  'eu',
  'fr',
  'gl',
  'ja',
  'ko',
  'oc',
  'pl',
  'pt_BR',
  'ru',
  'sl',
  'sr',
  'sr@latin',
  'sv',
  'zh_CN',
]

gnome.yelp(meson.project_name(),
  sources: help_sources,
  media: help_media,
  languages: help_languages,
)
