help_sources = [
  'bug-filing.page',
  'change-board-orientation.page',
  'change-look-feel.page',
  'chess-engines.page',
  'develop.page',
  'documentation.page',
  'index.page',
  'license.page',
  'play.page',
  'rules.page',
  'save-resume.page',
  'timer.page',
  'translate.page',
]

help_media = [
  'figures/game-3-28.png',
  'figures/logo.png',
  'figures/logo32.png',
]

gnome.yelp(meson.project_name(),
  sources: help_sources,
  media: help_media,
)
