icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon256dir=$(datadir)/icons/hicolor/256x256/apps
icon512dir=$(datadir)/icons/hicolor/512x512/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/gnome-chess.png
icon22_DATA = 22x22/gnome-chess.png
icon24_DATA = 24x24/gnome-chess.png
icon32_DATA = 32x32/gnome-chess.png
icon48_DATA = 48x48/gnome-chess.png
icon256_DATA = 256x256/gnome-chess.png
icon512_DATA = 512x512/gnome-chess.png
iconscalable_DATA = scalable/gnome-chess-symbolic.svg

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(icon256_DATA) $(icon512_DATA) $(iconscalable_DATA)

-include $(top_srcdir)/git.mk
