pixmapdir = $(datadir)/glchess/pieces/simple
pixmap_DATA = \
	blackKing.svg \
	blackQueen.svg \
	blackRook.svg \
	blackBishop.svg \
	blackKnight.svg \
	blackPawn.svg \
	whiteKing.svg \
	whiteQueen.svg \
	whiteRook.svg \
	whiteBishop.svg \
	whiteKnight.svg \
	whitePawn.svg

-include $(top_srcdir)/git.mk
